# nagger

./: Cargo.toml  Dockerfile  README.md  build.sh
resources/: query.graphql  resp.json  resp.ron  users.ron
src/: main.rs
