[package]
name = "nagger"
version = "0.1.0"
authors = ["filip <fbielejec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.8"
graphql_client = "^0.9"
serde = "^1.0"
serde_json = "1.0"
reqwest = { version = "^0.10", features = ["json", "blocking"] }
anyhow = "^1.0"
maplit = "^1.0"
async-std = {version = "1.8.0", features = ["unstable", "attributes"]}
# prettytable-rs = "^0.7"
# structopt = "^0.3"
# dotenv = "^0.13"
# envy = "^0.3"
