[package]
name = "nagger"
version = "0.2.0"
authors = ["filip <fbielejec@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0"
async-std = {version = "1.8.0", features = ["unstable", "attributes"]}
chrono = "0.4.19"
env_logger = "^0.8"
graphql_client = "^0.9"
log = "^0.4"
reqwest = { version = "^0.10", features = ["json", "blocking"] }
ron = "0.6.3"
serde = "^1.0"
serde_json = "1.0"